--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -12,6 +12,7 @@
               {% assign domain = '' %}
               {% else %}
               {% assign domain = base_path %}
+              <a href="{{ domain }}" target="_blank">CV</a>
             {% endif %}
             <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
           {% endfor %}
