--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -10,16 +10,16 @@
           {% for link in site.data.navigation.main %}
             {% if link.url contains 'http' %}
               {% assign domain = '' %}
-            {% else %}
+              {% else %}
               {% assign domain = base_path %}
             {% endif %}
             {% assign pdf_link = link.url | contains: '.pdf' %}
             {% if pdf_link %}
-              <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}" target="_blank">{{ link.title }}</a></li>
+              <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}" target="_blank"></a></li>
             {% else %}
-              <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
+              <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}"></a></li>
             {% endif %}
-            <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
+            <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}"></a></li>
           {% endfor %}
         </ul>
         <ul class="hidden-links hidden"></ul>
