--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -17,9 +17,9 @@
             {% if pdf_link %}
               <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}" target="_blank"></a></li>
             {% else %}
-              <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}"></a></li>
+              <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
             {% endif %}
-            <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}"></a></li>
+            <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
           {% endfor %}
         </ul>
         <ul class="hidden-links hidden"></ul>
